Table branches {
  id int [pk, increment]
  name varchar
  address text
}

Table categories {
  id int [pk, increment]
  name varchar
}

Table users {
  id int [pk, increment]
  branch_id int [ref: > branches.id] 
  role varchar [note: 'owner, cashier, kitchen']
  username varchar
  password varchar
  name varchar
}

Table shifts {
  id int [pk, increment]
  user_id int [ref: > users.id]
  start_time datetime
  end_time datetime
  status varchar [note: 'active, closed']
  starting_cash int [note: 'uang modal awal']
  expected_cash int [note: 'total cash masuk menurut sistem']
  actual_cash int [note: 'uang fisik pas shift out']
}

Table tables {
  id int [pk, increment]
  branch_id int [ref: > branches.id]
  table_number int
  qr_code_url varchar
}

Table products {
  id int [pk, increment]
  branch_id int [ref: > branches.id]
  category_id int [ref: > categories.id]
  image_url varchar [note: 'url foto produk']
  name varchar
  price int
  is_available boolean
}

Table product_addon_groups {
  id int [pk, increment]
  product_id int [ref: > products.id]
  name varchar [note: 'contoh: Variasi Suhu, Syrup, Additional']
  is_required boolean [note: 'true kalau Wajib, false kalau Opsional']
  min_qty int [note: 'minimal pilih, misal 1']
  max_qty int [note: 'maksimal pilih, misal 1 buat radio, 5 buat checkbox']
}

Table product_addons {
  id int [pk, increment]
  group_id int [ref: > product_addon_groups.id]
  name varchar [note: 'contoh: Dingin, Panas, Caramel']
  price int [note: 'harga tambahan, 0 kalau gratis']
  is_available boolean [note: 'buat handle tulisan stok habis']
}

Table configs {
  id int [pk, increment]
  branch_id int [ref: > branches.id]
  key varchar [note: 'store_name, tax, dll']
  value text
}

Table orders {
  id int [pk, increment]
  shift_id int [ref: > shifts.id, null]
  table_id int [ref: > tables.id, null]
  branch_id int [ref: > branches.id]
  order_type varchar [note: 'dine_in, takeaway']
  status varchar [note: 'pending, cooking, ready, completed']
  payment_method varchar [note: 'qris, cash']
  payment_status varchar [note: 'unpaid, paid']
  total_amount int
  created_at datetime
}

Table order_items {
  id int [pk, increment]
  order_id int [ref: > orders.id]
  product_id int [ref: > products.id]
  qty int
  status varchar [note: 'pending, cooking, ready']
  notes text [note: 'buat nyimpen inputan Catatan']
  created_at datetime
  updated_at datetime
}

Table order_item_addons {
  id int [pk, increment]
  order_item_id int [ref: > order_items.id]
  addon_id int [ref: > product_addons.id]
  price int [note: 'catat harga addon pas dipesan']
}